// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> Checked story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper"
    >
      <input
        checked=""
        class="radio__input"
        id=":r1:"
        name="option-checked"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label label--lg"
        for=":r1:"
      >
        Option 1
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="radio__input"
        id=":r0:"
        name="option-1"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label label--lg"
        for=":r0:"
      >
        Option 1
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> Disabled story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        class="radio__input"
        disabled=""
        id=":r2:"
        name="option-disabled"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        aria-disabled="true"
        class="label label--lg label--disabled"
        for=":r2:"
      >
        Option 1
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> DisabledAndChecked story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        checked=""
        class="radio__input"
        disabled=""
        id=":r3:"
        name="option-disabled"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        aria-disabled="true"
        class="label label--lg label--disabled"
        for=":r3:"
      >
        Option 1
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> Error story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="radio radio--error"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="radio--error radio__input"
        id=":r4:"
        name="option-error"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label label--lg"
        for=":r4:"
      >
        Option 1
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> ErrorAndChecked story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="radio radio--error"
  >
    <span
      class="input__wrapper"
    >
      <input
        checked=""
        class="radio--error radio__input"
        id=":r5:"
        name="option-error"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label label--lg"
        for=":r5:"
      >
        Option 1
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> LongLabels story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    style="display: grid; width: 20rem; grid-template-columns: repeat(2, minmax(0, 1fr)); gap: 1rem;"
  >
    <div
      class="radio"
    >
      <span
        class="input__wrapper"
      >
        <input
          checked=""
          class="radio__input"
          id=":r8:"
          name="option-long-label"
          readonly=""
          type="radio"
        />
        <span
          class="radio__container"
        />
        <span
          class="radio__selected"
        />
      </span>
      <div
        class="radio__labels"
      >
        <label
          class="label label--lg"
          for=":r8:"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Radio /> WithSublabel story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="radio__input"
        id=":r6:"
        name="option-1"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label label--lg"
        for=":r6:"
      >
        Option 1
      </label>
      <span
        class="text text--body-sm radio__sub-label"
      >
        Some additional label text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Radio /> WithoutVisibleLabel story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="radio"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-label="unchecked radio button"
        class="radio__input"
        id=":r7:"
        name="option-1"
        readonly=""
        type="radio"
      />
      <span
        class="radio__container"
      />
      <span
        class="radio__selected"
      />
    </span>
    <div
      class="radio__labels"
    >
      <label
        class="label label--lg"
        for=":r7:"
      />
    </div>
  </div>
</div>
`;
